--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="action-buttons-container">
-                <button id="reset-button" class="action-button" type="button">RESET FILTERS</button>
+                <button onclick="resetFilters()" id="reset-button" class="action-button" type="button">RESET FILTERS</button>
                 <button onclick="chooseImage()" id="choose-button" class="action-button" type="button">
                    CHOOSE IMAGE
                    <input type="file" id="file-input" accept="image/*" style="display: none;">
